# police-thief

./: $null  .dockerignore  .env  .env.example  .gitignore  API_DOCUMENTATION_COMPLETE.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  ENTERPRISE_IMPROVEMENT_PLAN.md  PROJECT_EVALUATION_REPORT.md  QUICK_START.md  QUIC_MIGRATION_GUIDE.md  README.md  SERVER_COMMANDS.md  SERVER_EXTENSION_GUIDE.md  SOCIAL_AUTH_ARCHITECTURE.md  SOCIAL_AUTH_SUMMARY.md  THREAT_MODEL.md  check_compilation.sh  deployment-comparison.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  dump.rdb  env  package-lock.json  package.json  rudp_load_test.py  run-server.bat  run-server.sh  setup-deps.ps1  setup-deps.sh  simple_udp_server.py  start.bat  tcp_load_test.py  verify_build.sh
gamecenter/: .env  CLAUDE.md  Cargo.toml  build.rs  setup_database.sh
gamecenter/change/: 01_변경사항_요약.md  02_성능_영향_분석.md  03_아키텍처_변경사항.md  04_제거된_기능_목록.md  05_유지된_인프라.md  06_구현_가이드.md  README.md
gamecenter/docker/: .env  Makefile  README.md  docker-compose.microservices.yml  docker-compose.unified.yml  nginx.conf  prometheus.yml
gamecenter/docker/grpc/: Dockerfile
gamecenter/docker/rudp/: Dockerfile
gamecenter/docker/tcp/: Dockerfile
gamecenter/docker/unified/: Dockerfile
gamecenter/migrations/: social_auth.sql
gamecenter/proto/: auth.proto
gamecenter/server_manager/: README.md  package-lock.json  package.json
gamecenter/server_manager/src/: App.tsx
gamecenter/sql/: README_simple.md  queries_simple.sql  schema_simple.sql
gamecenter/sql_complex/: README.md  indexes.sql  migration.sql  queries.sql  schema.sql
gamecenter/src/: admin_api.rs  admin_api_clean.rs  admin_api_dashboard.rs  admin_api_tests.rs  auth_middleware.rs  error.rs  lib.rs  main.rs  social_auth_handler.rs  tests.rs  unified_server.rs  websocket_handler.rs
gamecenter/src/api/: auth_api.rs
gamecenter/src/domain/: event_management.rs  mod.rs  monitoring.rs  user_management.rs
gamecenter/src/server/: config.rs  manager.rs  mod.rs  starters.rs
gamecenter/src/service/: auth_grpc_service.rs  mod.rs  password_helper.rs  social_auth_service.rs  token_service.rs
gamecenter/static/: dashboard.html
gamecenter/tests/: social_auth_simple_test.rs  social_auth_test.rs
grpcserver/: Cargo.toml  README.md  build.rs
grpcserver/how_to_use/: 01_gRPC_Server_Architecture.md  02_gRPC_Service_Extension.md  03_gRPC_Performance_Optimization.md
grpcserver/proto/: room.proto  user.proto
grpcserver/src/: lib.rs  main.rs  server.rs
grpcserver/src/config/: grpc_server.rs
grpcserver/src/controller/: mod.rs  optimized_user_controller.rs  room_controller.rs  user_controller.rs
grpcserver/src/service/: mod.rs  room_service.rs  user_service.rs
grpcserver/src/test/: mod.rs  test.rs  test_client.rs  test_interceptor.rs
grpcserver/src/tool/: error.rs  grpc_response.rs  intercepter.rs  mod.rs  token.rs
grpcserver/tests/: integration_test.rs
quicserver/: Cargo.toml  README.md
quicserver/src/: communication.rs  config.rs  game_logic.rs  lib.rs  main.rs
quicserver/src/handler/: message.rs  mod.rs  unified_handler.rs
quicserver/src/monitoring/: metrics.rs
quicserver/src/network/: connection.rs  mod.rs  server.rs  session.rs  stream.rs
quicserver/src/optimization/: mod.rs  optimizer.rs  quic_performance_suite.rs
quicserver/src/protocol/: quic.rs
quicserver/tests/: integration_tests.rs
rudpserver/: ARCHITECTURE.md  Cargo.toml  README.md  SKILL_SYSTEM_IMPLEMENTATION.md  skills_architecture.json  test_runner.ps1  test_runner.sh
rudpserver/how_to_use/: 01_RUDP_Server_Architecture.md  02_RUDP_Message_Handler_Extension.md  03_RUDP_Performance_Optimization.md
rudpserver/src/: benchmark.rs  config.rs  lib.rs  main.rs  types.rs
rudpserver/src/game/: messages.rs  mod.rs  player.rs  player_old.rs  room_user_manager.rs  sample_example.rs  skill_api.rs  skill_loader.rs  state_manager.rs
rudpserver/src/handler/: mod.rs
rudpserver/src/network/: mod.rs  session.rs
rudpserver/src/protocol/: mod.rs  rudp.rs
rudpserver/src/service/: mod.rs
rudpserver/src/utils/: mod.rs  performance.rs
rudpserver/tests/: TEST_REPORT.md  load_test.rs  mod.rs  network_load_test.rs  simple_test.rs  skill_integration_test.rs
rudpserver/tests/benchmarks/: performance_benchmarks.rs
rudpserver/tests/integration/: server_integration_tests.rs
rudpserver/tests/load/: load_test_300_players.rs
rudpserver/tests/stress/: stress_test.rs
rudpserver/tests/unit/: protocol_tests.rs
shared/: Cargo.toml
shared/examples/: clean_db_usage.rs  db_service_example.rs  enhanced_db_usage.rs  logging_example.rs
shared/src/: error_handling.rs  lib.rs  safe_unwrap.rs  service_factory.rs  service_factory_v2.rs  traits.rs
shared/src/auth/: mod.rs  social_auth.rs  token.rs  types.rs
shared/src/config/: connection_pool.rs  db.rs  mod.rs  redis_config.rs
shared/src/logging/: README.md  advanced_observability.rs  config.rs  formatter.rs  mod.rs  rotation.rs  system.rs  writer.rs
shared/src/model/: mod.rs  room_model.rs  user_model.rs
shared/src/monitoring/: enterprise_monitoring.rs  metrics.rs  metrics_init.rs  mod.rs
shared/src/security/: access_control.rs  config_validator.rs  crypto.rs  input_validator.rs  jwt.rs  key_manager.rs  key_rotation.rs  middleware.rs  mod.rs  rate_limiter.rs  redis_command_validator.rs  security_audit.rs  security_auditor.rs  validation.rs  zero_trust.rs
shared/src/service/: mod.rs  token.rs  traits.rs
shared/src/tool/: current_time.rs  data_utils.rs  error.rs  get_id.rs  hex_utils.rs  mod.rs
shared/tests/: comprehensive_tests.rs  enhanced_db_service_test.rs  logging_integration_test.rs  redis_test.rs
tcpserver/: Cargo.toml  README.md  test_runner.sh
tcpserver/how_to_use/: 01_TCP_Server_Architecture.md  02_Message_Handler_Extension.md  03_Performance_Plugin_Examples.md
tcpserver/src/: config.rs  lib.rs  main.rs  main_new.rs  protocol.rs
tcpserver/src/handler/: chat_room_handler.rs  chat_room_message_handler.rs  mod.rs  (+5 more)
tcpserver/tests/: integration_test.rs  load_test.rs  resource_constraint_test.rs
(+377 files in other folders)
