[package]
name = "Backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]


# Redis
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }

# Async runtime
tokio = { version = "1.35.0", features = ["full"] }

# Error handling
anyhow = "1.0.79"

# Serialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

# Random number generation
rand = "0.8.5"

# Environment variables
dotenv = "0.15.0"

# Logging (recommended for production)
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
# For testing
tokio-test = "0.4.3" 