[workspace]
resolver = "3"
members = [
    "shared",
    "grpcserver", 
    "gamecenter",
    "tcpserver"
]

# 공통 의존성 버전 관리를 위한 workspace-wide dependencies
[workspace.dependencies]
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.35.0", features = ["full"] }
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
rand = "0.8.5"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tonic = "0.10"
prost = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tokio-test = "0.4.3"
tonic-build = "0.10"
jsonwebtoken = "9.2"
thiserror = "1.0"
flate2 = "1.0"
crc32fast = "1.3"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono", "uuid"] }

