[package]
name = "gamecenter"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared library
shared = { path = "../shared" }

# Workspace dependencies
redis.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
dotenv.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio-test.workspace = true
