[package]
name = "gamecenter"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared library
shared = { path = "../shared" }

# Server components
grpcserver = { path = "../grpcserver" }
tcpserver = { path = "../tcpserver" }
rudpserver = { path = "../rudpserver" }

# Workspace dependencies
redis.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
dotenv.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
chrono.workspace = true

# Additional dependencies for server integration
futures = "0.3"
tokio-util = "0.7"

[dev-dependencies]
tokio-test.workspace = true
