[package]
name = "grpcserver"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Shared 라이브러리 의존성
shared = { path = "../shared" }

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "grpcserver"
path = "src/main.rs"