[package]
name = "rudpserver"
version = "0.1.0"
edition = "2021"

[dependencies]
# 워크스페이스 공통 의존성
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
thiserror.workspace = true

# RUDP 특화 의존성
laminar.workspace = true
dashmap.workspace = true
rayon.workspace = true
parking_lot.workspace = true
crossbeam.workspace = true
bytes.workspace = true
once_cell.workspace = true
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
rand.workspace = true
bincode = "1.3"

# 공유 라이브러리
shared = { path = "../shared" }

[dev-dependencies]
# 테스트 의존성
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tokio-test = "0.4"
futures = "0.3"

[[bin]]
name = "rudpserver"
path = "src/main.rs"

[[bin]]
name = "rudp_benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "rudp_load_test"
path = "tests/load/load_test_300_players.rs"

[[test]]
name = "protocol_tests"
path = "tests/unit/protocol_tests.rs"

[[test]]
name = "server_integration_tests"
path = "tests/integration/server_integration_tests.rs"

[[test]]
name = "stress_test"
path = "tests/stress/stress_test.rs"

[[bench]]
name = "performance_benchmarks"
path = "tests/benchmarks/performance_benchmarks.rs"
harness = false