[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
redis.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
dotenv.workspace = true
tracing.workspace = true 
jsonwebtoken.workspace = true
tonic.workspace = true
chrono.workspace = true