[package]
name = "tcpserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
thiserror.workspace = true
rand.workspace = true
flate2 = "1.0"
crc32fast = "1.3"

# Shared 라이브러리 의존성
shared = { path = "../shared" }

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "tcpserver"
path = "src/main.rs"
